# Alm_project

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
analyzerservice/: config.py  errors.py
analyzerservice/data/: data_loader.py  dbbase.py  report_generator.py
analyzerservice/fake/: explorer.py  explorer.xml  invalid.xml  valid.xml
analyzerservice/model/: schemas.py
analyzerservice/service/: data_loader.py  report_generator.py
analyzerservice/src/: cache.py  celery_app.py  main.py
analyzerservice/web/: data_loading_api.py  report_generation_api.py
tests/unit/data/: test_analiser_data.py  test_explorer_data.py
tests/unit/service/: test_explorer_service.py
tests/unit/web/: test_analiser_web.py  test_explorer_web.py
